--- a/app/views/customer/services/_form.html.erb
+++ b/app/views/customer/services/_form.html.erb
@@ -161,7 +161,7 @@
 
 <script type="text/javascript" charset="utf-8">
     $(document).ready(function(){
-        $('[data-toggle="tooltip"]').tooltip();
+        $('[data-toggle="tooltip"]').popover();
     });
     $('#nested-service-images #nested-click').click(function(){
         if ($("#nested-service-images :input").length > 4){
