--- a/app/views/customer/welcome/dashboard.html.erb
+++ b/app/views/customer/welcome/dashboard.html.erb
@@ -2,7 +2,19 @@
     <h1 class="page-title">
       Dashboard
     </h1>
+  <div class="col-sm-10">
     <div id="calendar"></div>
+  </div>
+  <div class="col-sm-2">
+    <div class="color-code-con">
+      <h4>Defined Color</h4>
+      <div class="color-code"><span class="defined_color green-color"></span> Product</div>
+      <div class="color-code"><span class="defined_color blue-color"></span> Service</div>
+      <div class="color-code"><span class="defined_color black-color"></span> Confirmed Product/Service</div>
+      <div class="color-code"><span class="defined_color yellow-color"></span> Quoted Product/Service</div>
+      <div class="color-code"><span class="defined_color pink-color"></span> Enquired Product/Service</div>
+    </div>
+  </div>
 </div>
 <style>
     #calendar {
