--- a/app/views/customer/enquiries/index.html.erb
+++ b/app/views/customer/enquiries/index.html.erb
@@ -122,7 +122,7 @@
         <!--</tbody>-->
       <!--</table>-->
     <!--</div>-->
-    <div class="col-sm-12">
+    <div class="col-xs-12">
       <h1 class="page-title">My Enquiries</h1>
       <!--<table class="table table-striped">-->
         <!--<thead>-->
