--- a/app/views/customer/shared/_header.html.erb
+++ b/app/views/customer/shared/_header.html.erb
@@ -176,6 +176,7 @@
                     <li><%= link_to 'Products', customer_products_path %></li>
                     <li><%= link_to 'Services', customer_services_path %></li>
                     <li><%= link_to 'My Enquiries', customer_enquiries_path %></li>
+                    <li><%= link_to 'Wishlist', '/customer/wish_list' %></li>
                   </ul>
                 </li>
                 <li><%= link_to 'Sign out', destroy_user_session_path, method: :delete %></li>
