--- a/app/views/customer/products/_form.html.erb
+++ b/app/views/customer/products/_form.html.erb
@@ -141,12 +141,17 @@
 
 <script type="text/javascript" charset="utf-8">
     $(document).ready(function(){
-        $('[data-toggle="popover"]').popover();
-        $('body').click(function(e) {
-            if ($(e.target).data('toggle') !== 'popover' && $(e.target).parents('.popover.in').length === 0) {
+//        $('[data-toggle="popover"]').popover();
+//        $('body').click(function(e) {
+//            if ($(e.target).data('toggle') !== 'popover' && $(e.target).parents('.popover.in').length === 0) {
 //                debugger
+//                $('[data-toggle="popover"]').popover('');
+//            }
+//        });
+        $('[data-toggle="popover"]').popover().click(function(){
+            setTimeout(function () {
                 $('[data-toggle="popover"]').popover('hide');
-            }
+            }, 10000);
         });
     });
 
