--- a/app/views/customer/welcome/wish_list.html.erb
+++ b/app/views/customer/welcome/wish_list.html.erb
@@ -1,7 +1,7 @@
 <div class="customer-main-con">
   <div class="row">
     <div class="col-xs-12">
-      <h1 class="page-title">My Enquiries</h1>
+      <h1 class="page-title">My Wish List</h1>
       <div class="customer-main-show">
         <ul class="nav nav-tabs">
           <li class="active"><a data-toggle="tab" href="#products">Products(<%=@products.count%>)</a></li>
