--- a/app/views/customer/products/edit.html.erb
+++ b/app/views/customer/products/edit.html.erb
@@ -1,8 +1,16 @@
-<div class="row">
-  <div class="col-sm-4">
-    <%= render partial: 'form' %>
+<div class="content-main-section">
+  <div class="container">
+    <div class="col-md-offset-1 col-sm-offset-1 col-md-10 col-sm-10 col-xs-12">
+      <h2 class="text-center">Edit Product</h2>
+      <div class="row">
+        <div class="col-md-12">
+          <div class="contact-main-form">
+            <%= render partial: 'form' %>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
-  <div class="col-sm-8"></div>
 </div>
 
 <script type="text/javascript" charset="utf-8">
